fix contrast for $text-muted on $table-bg-accent

--- a/src/pretix/static/pretixbase/scss/_bootstrap_vars.scss
+++ b/src/pretix/static/pretixbase/scss/_bootstrap_vars.scss
@@ -8,7 +8,7 @@ $gray-lightest: lighten(#000, 97.25%);
 
 $font-family-sans-serif: var(--pretix-font-family-sans-serif);
 $text-color: #222222 !default;
-$text-muted: #767676 !default;
+$text-muted: #737373 !default;
 $input-color-placeholder: lighten(#000, 70%) !default;
 
 $border-radius-base: var(--pretix-border-radius-base);
